# python_ecosystems

./: .gitignore
module_26_fastapi/homework/: .test.env  README.md  env.template  problems.md  pyproject.toml  pytest.ini
module_26_fastapi/homework/api/: main.py  settings.py
module_26_fastapi/homework/api/core/: __init__.py  dependencies.py  routes_recipes.py  settings.py
module_26_fastapi/homework/api/core/orm_core/: __init__.py  crud.py  engine.py
module_26_fastapi/homework/api/core/orm_core/models/: base.py  recipes.py
module_26_fastapi/homework/api/core/validate_schemes/: recipes_validate_model.py
module_26_fastapi/homework/api/static/: description.md
module_26_fastapi/homework/backend/tests/: test_api_routes.py
module_26_fastapi/homework/lissen_fastapi/: bigger_app.py  long_task.py  main_body_fields.py  main_body_many_params.py  main_body_response.py  main_cookes.py  main_declare_data.py  main_dependency_injection.py  main_errors.py  main_file.py  main_form_data.py  main_json_encode.py  main_nested_models.py  main_path_operation_config.py  main_path_params.py  main_query.py  main_response_model.py  middleware.py  requirements.txt  test_api.py  urls_meta_and_docs.py
module_26_fastapi/homework/lissen_fastapi/auth/: jwt-private.pem  jwt-public.pem  main_security.py  main_security_part_four.py  main_security_part_tree.py  main_security_part_two.py
module_26_fastapi/homework/test/: pytest.ini  test_api_routes.py
module_27_postgres_migrations/hw/task_1/: .env.tamplate  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
module_27_postgres_migrations/hw/task_1/app/: main.py
module_27_postgres_migrations/hw/task_2/: README.md  pyproject.toml
module_27_postgres_migrations/hw/task_2/app/: app.py
module_27_postgres_migrations/hw/task_2/app/core/: __init__.py
module_27_postgres_migrations/hw/task_2/app/core/controlers/: coffeeshop.py
module_27_postgres_migrations/hw/task_2/app/core/models/models/: basemodel.py
module_27_postgres_migrations/hw/task_2/flask_app/: pyproject.toml
module_27_postgres_migrations/hw/task_2/flask_app/app/: app.py
module_27_postgres_migrations/hw/task_2/flask_app/app/core/models_orm/: crud.py
module_27_postgres_migrations/hw/task_2_3/flask_app/: .env.tamplate  Dockerfile  README.md  docker-compose.yml  pyproject.toml
module_27_postgres_migrations/hw/task_2_3/flask_app/alembic/: env.py
module_27_postgres_migrations/hw/task_2_3/flask_app/alembic/versions/: 577bebea1a21_first_table.py  c17af7adc6f2_del_column_has_sale.py
module_27_postgres_migrations/hw/task_2_3/flask_app/app/alembic/: env.py
module_27_postgres_migrations/hw/task_2_3/flask_app/app/alembic/versions/: 40eb9785f3d6_create_table.py  4ab73a78cab4_create_column_user_patronomic.py  53a9d6233aa3_del_user_has_sale.py  b789e598720f_user_surname.py
module_27_postgres_migrations/hw/task_2_3/flask_app/app/core/: __init__.py  settings.py
module_27_postgres_migrations/hw/task_2_3/flask_app/app/core/controlers/: coffeeshop.py
module_27_postgres_migrations/hw/task_2_3/flask_app/app/core/models_orm/: __init__.py  engine.py
module_29_testing/hw/testing_app/: README.md  pyproject.toml  pytest.ini
module_29_testing/hw/testing_app/app/: controllers.py  main.py  orm_models.py
module_29_testing/hw/testing_app/app/instance/: project.db
module_29_testing/hw/testing_app/tests/: conftest.py  factories.py  test_api_and_db.py  test_api_parking.py  test_base.py  test_db_with_factory.py
(+366 files in other folders)
