[tool.poetry]
name = "sync postgres"
version = "0.1.0"
description = ""
authors = ["Miron <mairon26rus@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
flask = "2.0"
werkzeug = "2.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
