[tool.poetry]
name = "testing_app"
version = "0.1.0"
description = ""
authors = ["Miron miron.nicolaevich@gmail.com"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
pydantic = "^2.8.2"
Flask-SQLAlchemy = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
